<resources>
    <string name="app_name">Dead Reckoning</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="step">STEPS</string>
    <string name="height">Height (in cm)</string>
    <string name="angle">Angle correction (in °)</string>
    <string name="stepSensor">Step Detector</string>
    <string name="delta">Sensibility</string>

</resources>