<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/mapFragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textStep"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_marginTop="26dp"
        android:text="@string/step"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapFragment" />

    <TextView
        android:id="@+id/textNumberStep"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_marginTop="26dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/textStep"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapFragment" />

    <EditText
        android:id="@+id/sizeField"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        android:hint="@string/height"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/correctionAngle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchStepSensor"
        app:layout_constraintVertical_bias="0.984" />

    <TextView
        android:id="@+id/sliderText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginStart="10dp"
        android:text="@string/delta"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/sizeField"
        app:layout_constraintTop_toBottomOf="@+id/switchStepSensor" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderDELTA"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="25dp"
        android:hint="@string/delta"
        android:stepSize="1"
        android:textSize="20sp"
        android:value="5"
        android:valueFrom="2"
        android:valueTo="8"
        app:labelBehavior="floating"
        app:layout_constraintStart_toEndOf="@+id/sizeField"
        app:layout_constraintTop_toBottomOf="@+id/switchStepSensor" />

    <EditText
        android:id="@+id/correctionAngle"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="11dp"
        android:hint="@string/angle"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeField"
        app:layout_constraintVertical_bias="0.939" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/button_start_background_color"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonReset"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switchStepSensor"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginTop="0dp"
        android:checked="false"
        android:text="@string/stepSensor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNumberStep"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>